Moving from OpenJFX to Jetpack Compose for Desktop